@@ -68,6 +68,9 @@ https://github.com/elastic/beats/compare/v5.0.0-alpha5...master[Check the HEAD d
 - Make Kafka metadata update configurable. {pull}2190[2190]
 - Add kafka version setting (optional) enabling kafka broker version support. {pull}2190[2190]
 - Add kafka message timestamp if at least version 0.10 is configured. {pull}2190[2190]
+- Add configurable kafka event key setting. {pull}2284[2284]
+- Add settings for configuring the kafka partitioning strategy. {pull}2284[2284]
+- Add partitioner settings `reachable_only` to ignore partitions not reachable by network. {pull}2284[2284]
 - Enhance contains condition to work on fields that are arrays of strings. {issue}2237[2237]
 - Lookup the configuration file relative to the `-path.config` CLI flag. {pull}2245[2245]
 - Re-write import_dashboards.sh in Golang. {pull}2155[2155]
